--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,4 +1,8 @@
 $myColor: black;
+$main: #196db6;
+$lgray: #f5f5f5;
+$mgray: #969696;
+$dgray: #333;
 
 $susy: (
   debug: (
@@ -11,6 +15,9 @@ $susy: (
 );
 
 @import "node_modules/susy/sass/susy";
+// Google Fonts
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,900,700,300);
+$raleway: 'Raleway', tahoma, sans-serif;
 
 h1 {
 	color: $myColor;
@@ -24,12 +31,55 @@ h1 {
 	padding-top: 0.1px; /* collapsing margins fix */
 }
 
-html {
-	background-color: #BDBDBD;
-}
+// html {
+// 	background-color: #BDBDBD;
+// }
 
 .wrapper {
 	@include container(840px);
+}
+
+.form-wrapper {
+  background-color: $lgray;
+  padding: 20px 35px;
+  text-align: center;
+  h3 {
+    color: $mgray;
+    font-family: $raleway;
+    font-size: 36px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  input {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+}
+input[type="text"] {
+  width: 50vw;
+  padding: 15px 20px;
+  border: solid 3px #c9c9c9;
+  transition: border 0.3s;
+  font-family: "Raleway", Tahoma, sans-serif;
+  font-size: 20px;
+}
+input[type="text"]:focus,
+input[type="text"].focus {
+  outline: none;
+  border: solid 3px $mgray;
+}
+
+input[type="submit"] {
+  padding: 15px 20px;
+  background: $main;
+  color: white;
+  border: 3px solid darken($main, 5);
+  font-family: "Raleway", Tahoma, sans-serif;
+  font-size: 20px;
+  &:hover {
+    background: lighten($main, 5);
+    border-color: $main;
+  }
 }
 
 .whisper {
