--- a/views/preview.ejs
+++ b/views/preview.ejs
@@ -13,12 +13,20 @@
 			width: 640px;
 			height: 920px;
 			overflow: hidden;
+			background-color: #222;
 		}
 		.wrapper img {
 			position: absolute;
 			left: 0;
 			top: 0;
-			height: 920px;
+			/*height: 920px;*/
+			min-height: 100%;
+			min-width: 100%;
+		}
+		.wrapper .photo-overlay {
+			left: 50%;
+			top: 50%;
+			transform: translateX(-50%) translateY(-50%);
 		}
 	</style>
 </head>
