--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,1 +1,198 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,900,700,300);h1{color:#000}h1+p{color:blue}body{padding:0;margin:0}*{padding-top:0.1px}.wrapper{max-width:840px;margin-left:auto;margin-right:auto}.wrapper:after{content:" ";display:block;clear:both}head{display:block;position:fixed;right:10px;top:10px;z-index:999;color:#333;background:rgba(255,255,255,0.25)}head:before{content:"|||";display:block;padding:5px 10px;font-family:sans-serif;font-size:16px;font-weight:bold}head:hover{background:rgba(255,255,255,0.5);color:red}head:hover ~ .wrapper,head:hover ~ body .wrapper{position:relative}head:hover ~ .wrapper:before,head:hover ~ body .wrapper:before{position:absolute;top:0;left:0;bottom:0;right:0;content:" ";z-index:998;background-image:-webkit-gradient(linear, left top, right top, color-stop(10%, transparent),color-stop(10%, rgba(102,102,255,0.25)),color-stop(90%, rgba(179,179,255,0.25)),color-stop(90%, transparent));background-image:-webkit-linear-gradient(left, transparent 10%,rgba(102,102,255,0.25) 10%,rgba(179,179,255,0.25) 90%,transparent 90%);background-image:linear-gradient(to right, transparent 10%,rgba(102,102,255,0.25) 10%,rgba(179,179,255,0.25) 90%,transparent 90%);background-size:25%;background-origin:content-box;background-clip:content-box;background-position:left top}.form-wrapper{background-color:#f5f5f5;padding:20px 35px;text-align:center}.form-wrapper h3{color:#969696;font-family:"Raleway",tahoma,sans-serif;font-size:36px;margin-top:5px;margin-bottom:5px}.form-wrapper input{margin-top:5px;margin-bottom:5px}input[type="text"]{width:50vw;padding:15px 20px;border:solid 3px #c9c9c9;-webkit-transition:border 0.3s;transition:border 0.3s;font-family:"Raleway", Tahoma, sans-serif;font-size:20px}input[type="text"]:focus,input[type="text"].focus{outline:none;border:solid 3px #969696}input[type="submit"]{padding:15px 20px;background:#196db6;color:white;border:3px solid #1660a0;font-family:"Raleway", Tahoma, sans-serif;font-size:20px}input[type="submit"]:hover{background:#1c7acc;border-color:#196db6}.whisper{-webkit-box-sizing:border-box;box-sizing:border-box;height:500px;width:350px;padding:0px 1em;margin-bottom:55px;border:1px solid black;-webkit-border-radius:5px;border-radius:5px;width:43.33333%;float:left;margin-left:3.33333%;margin-right:3.33333%}.whisper-text{font-size:40px;font-weight:bold;color:white;text-align:center;font-family:'PT Sans Narrow', sans-serif;text-shadow:2px 0 0 #000, -2px 0 0 purple, 0 2px 0 #000, 0 -2px 0 purple, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 0px 0px 15px black}.mdl-card__media div{padding:20px;height:350px;color:white;font-weight:normal;font-size:1.8em;line-height:1em;background-color:gray;text-shadow:2px 0 0 #000, -2px 0 0 purple, 0 2px 0 #000, 0 -2px 0 purple, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 0px 0px 15px black}@media (max-width: 850px){.wrapper{max-width:100%;margin-left:auto;margin-right:auto}.wrapper:after{content:" ";display:block;clear:both}head:hover ~ .wrapper,head:hover ~ body .wrapper{position:relative}head:hover ~ .wrapper:before,head:hover ~ body .wrapper:before{position:absolute;top:0;left:0;bottom:0;right:0;content:" ";z-index:998;background-image:-webkit-gradient(linear, left top, right top, color-stop(10%, transparent),color-stop(10%, rgba(102,102,255,0.25)),color-stop(90%, rgba(179,179,255,0.25)),color-stop(90%, transparent));background-image:-webkit-linear-gradient(left, transparent 10%,rgba(102,102,255,0.25) 10%,rgba(179,179,255,0.25) 90%,transparent 90%);background-image:linear-gradient(to right, transparent 10%,rgba(102,102,255,0.25) 10%,rgba(179,179,255,0.25) 90%,transparent 90%);background-size:25%;background-origin:content-box;background-clip:content-box;background-position:left top}.whisper{height:65vw;margin-bottom:5px;padding:.8vw 2.2vw;width:48.33333%;float:left;margin-left:.83333%;margin-right:.83333%}.whisper-text{font-size:5.3vw;line-height:1.2}}
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,900,700,300);
+h1 {
+  color: black; }
+  h1 + p {
+    color: blue; }
+
+body {
+  padding: 0;
+  margin: 0; }
+
+* {
+  padding-top: 0.1px;
+  /* collapsing margins fix */ }
+
+.wrapper {
+  max-width: 840px;
+  margin-left: auto;
+  margin-right: auto; }
+  .wrapper:after {
+    content: " ";
+    display: block;
+    clear: both; }
+  head {
+    display: block;
+    position: fixed;
+    right: 10px;
+    top: 10px;
+    z-index: 999;
+    color: #333;
+    background: rgba(255, 255, 255, 0.25); }
+  head:before {
+    content: "|||";
+    display: block;
+    padding: 5px 10px;
+    font-family: sans-serif;
+    font-size: 16px;
+    font-weight: bold; }
+  head:hover {
+    background: rgba(255, 255, 255, 0.5);
+    color: red; }
+  head:hover ~ .wrapper,
+  head:hover ~ body .wrapper {
+    position: relative; }
+    head:hover ~ .wrapper:before,
+    head:hover ~ body .wrapper:before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      content: " ";
+      z-index: 998;
+      background-image: -webkit-gradient(linear, left top, right top, color-stop(10%, transparent), color-stop(10%, rgba(102, 102, 255, 0.25)), color-stop(90%, rgba(179, 179, 255, 0.25)), color-stop(90%, transparent));
+      background-image: -webkit-linear-gradient(left, transparent 10%, rgba(102, 102, 255, 0.25) 10%, rgba(179, 179, 255, 0.25) 90%, transparent 90%);
+      background-image: linear-gradient(to right, transparent 10%, rgba(102, 102, 255, 0.25) 10%, rgba(179, 179, 255, 0.25) 90%, transparent 90%);
+      background-size: 25%;
+      background-origin: content-box;
+      background-clip: content-box;
+      background-position: left top; }
+
+.preview-wrapper {
+  position: relative;
+  width: 640px;
+  height: 920px;
+  overflow: hidden;
+  background-color: #222; }
+  .preview-wrapper img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    /*height: 920px;*/
+    min-height: 100%;
+    min-width: 100%; }
+  .preview-wrapper .photo-overlay {
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+        -ms-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%); }
+
+.form-wrapper {
+  background-color: #f5f5f5;
+  padding: 20px 35px;
+  text-align: center; }
+  .form-wrapper h3 {
+    color: #969696;
+    font-family: "Raleway", tahoma, sans-serif;
+    font-size: 36px;
+    margin-top: 5px;
+    margin-bottom: 5px; }
+  .form-wrapper input {
+    margin-top: 5px;
+    margin-bottom: 5px; }
+
+input[type="text"] {
+  width: 50vw;
+  padding: 15px 20px;
+  border: solid 3px #c9c9c9;
+  -webkit-transition: border 0.3s;
+  transition: border 0.3s;
+  font-family: "Raleway", Tahoma, sans-serif;
+  font-size: 20px; }
+
+input[type="text"]:focus,
+input[type="text"].focus {
+  outline: none;
+  border: solid 3px #969696; }
+
+input[type="submit"] {
+  padding: 15px 20px;
+  background: #196db6;
+  color: white;
+  border: 3px solid #1660a0;
+  font-family: "Raleway", Tahoma, sans-serif;
+  font-size: 20px; }
+  input[type="submit"]:hover {
+    background: #1c7acc;
+    border-color: #196db6; }
+
+.gallery-wrapper input[type="radio"] {
+  display: none; }
+  .gallery-wrapper input[type="radio"] + label {
+    display: block; }
+  .gallery-wrapper input[type="radio"]:checked + label {
+    border: 5px solid red; }
+
+.whisper {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 500px;
+  width: 350px;
+  padding: 0px 1em;
+  margin-bottom: 55px;
+  border: 1px solid black;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  width: 43.33333%;
+  float: left;
+  margin-left: 3.33333%;
+  margin-right: 3.33333%; }
+
+.whisper-text {
+  font-size: 40px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  font-family: 'PT Sans Narrow', sans-serif;
+  text-shadow: 2px 0 0 #000, -2px 0 0 purple, 0 2px 0 #000, 0 -2px 0 purple, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 0px 0px 15px black; }
+
+.mdl-card__media div {
+  padding: 20px;
+  height: 350px;
+  color: white;
+  font-weight: normal;
+  font-size: 1.8em;
+  line-height: 1em;
+  background-color: gray;
+  text-shadow: 2px 0 0 #000, -2px 0 0 purple, 0 2px 0 #000, 0 -2px 0 purple, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 0px 0px 15px black; }
+
+@media (max-width: 850px) {
+  .wrapper {
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto; }
+    .wrapper:after {
+      content: " ";
+      display: block;
+      clear: both; }
+    head:hover ~ .wrapper,
+    head:hover ~ body .wrapper {
+      position: relative; }
+      head:hover ~ .wrapper:before,
+      head:hover ~ body .wrapper:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        content: " ";
+        z-index: 998;
+        background-image: -webkit-gradient(linear, left top, right top, color-stop(10%, transparent), color-stop(10%, rgba(102, 102, 255, 0.25)), color-stop(90%, rgba(179, 179, 255, 0.25)), color-stop(90%, transparent));
+        background-image: -webkit-linear-gradient(left, transparent 10%, rgba(102, 102, 255, 0.25) 10%, rgba(179, 179, 255, 0.25) 90%, transparent 90%);
+        background-image: linear-gradient(to right, transparent 10%, rgba(102, 102, 255, 0.25) 10%, rgba(179, 179, 255, 0.25) 90%, transparent 90%);
+        background-size: 25%;
+        background-origin: content-box;
+        background-clip: content-box;
+        background-position: left top; }
+  .whisper {
+    height: 65vw;
+    margin-bottom: 5px;
+    padding: .8vw 2.2vw;
+    width: 48.33333%;
+    float: left;
+    margin-left: 0.83333%;
+    margin-right: 0.83333%; }
+  .whisper-text {
+    font-size: 5.3vw;
+    line-height: 1.2; } }
