--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -34,6 +34,7 @@ body {
 
 * {
 	padding-top: 0.1px; /* collapsing margins fix */
+  box-sizing: border-box;
 }
 
 // html {
@@ -44,7 +45,9 @@ body {
 	@include container(840px);
 }
 
+/**Previewe Wrapper **/
 .preview-wrapper {
+  margin: 5px 10px;
   position: relative;
   width: 640px;
   height: 920px;
@@ -65,6 +68,7 @@ body {
   }
 }
 
+/** Form Wrapper **/
 .form-wrapper {
   background-color: $lgray;
   padding: 20px 35px;
@@ -72,7 +76,7 @@ body {
   h3 {
     color: $mgray;
     font-family: $raleway;
-    font-size: 36px;
+    font-size: 28px;
     margin-top: 5px;
     margin-bottom: 5px;
   }
@@ -83,7 +87,7 @@ body {
 }
 input[type="text"] {
   width: 50vw;
-  padding: 15px 20px;
+  padding: 10px 15px;
   border: solid 3px #c9c9c9;
   transition: border 0.3s;
   font-family: "Raleway", Tahoma, sans-serif;
@@ -96,7 +100,7 @@ input[type="text"].focus {
 }
 
 input[type="submit"] {
-  padding: 15px 20px;
+  padding: 10px 15px;
   background: $main;
   color: white;
   border: 3px solid darken($main, 5);
@@ -108,18 +112,29 @@ input[type="submit"] {
   }
 }
 
+/** Gallery Wrapper **/
 .gallery-wrapper {
   input[type="radio"] {
     display: none;
     + label {
-      display: block;
+
+      img {
+        @include span(20%);
+        height: 100px;
+        width: auto;
+        margin: 5px 10px;
+      }
     }
     &:checked + label {
-      border: 5px solid red;
+
     }
   }
 }
+.selected {
+  box-shadow: 0px 2px 5px $dgray;
+}
 
+/** Cards **/
 .whisper {
 	box-sizing: border-box;
 	height: 500px;
