--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,12 +1,18 @@
+// Colors
 $myColor: black;
 $main: #196db6;
 $lgray: #f5f5f5;
 $mgray: #969696;
 $dgray: #333;
+
+// Gallery Image Size
 $img: 124px;
+
+// Custom Styles
 $lborder: 3px solid #c9c9c9;
 $dborder: solid 3px $mgray;
 
+// Susy
 $susy: (
   debug: (
     image: show,
@@ -19,206 +25,16 @@ $susy: (
   gutters: 0
 );
 
+// Import SCSS Modules
 @import "node_modules/susy/sass/susy";
-// Google Fonts
+
+// Import Google Fonts
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,900,700,300);
 $raleway: 'Raleway', tahoma, sans-serif;
 
-h1 {
-	color: $myColor;
-	+p {
-		color: blue;
-
-	}
-}
-
-body {
-	padding: 0;
-	margin: 0;
-}
-
-* {
-	padding-top: 0.1px; /* collapsing margins fix */
-  box-sizing: border-box;
-}
-
-.clearfix {
-  clear: both;
-}
-
-/**Angular ngCloak **/
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-  display: none !important;
-}
-
-/** Susy Containers **/
-.wrapper {
-	@include container(840px);
-}
-
-.container {
-  @include container(1120px);
-}
-
-/**Preview Wrapper **/
-.preview-wrapper {
-  @include container;
-  @include span(2 of 5);
-  margin: 5px 10px;
-  position: relative;
-  width: 320px;
-  height: 460px;
-  overflow: hidden;
-  background-color: #222; //find a pattern
-  img{
-    position: absolute;
-    left: 0;
-    top: 0;
-    min-height: 100%;
-    min-width: 100%;
-  }
-  .photo-overlay {
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-  }
-  .text-image {
-    width: 320px;
-    height: 460px;
-  }
-}
-
-/** Form Wrapper **/
-.form-wrapper {
-  background-color: $lgray;
-  padding: 20px 35px;
-  text-align: center;
-  h3 {
-    color: $mgray;
-    font-family: $raleway;
-    font-size: 28px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-  }
-  input {
-    margin-top: 5px;
-    margin-bottom: 5px;
-  }
-}
-input[type="text"] {
-  width: 50vw;
-  padding: 10px 15px;
-  border: solid 3px #c9c9c9;
-  transition: border 0.3s;
-  font-family: $raleway;
-  font-size: 20px;
-}
-input[type="text"]:focus,
-input[type="text"].focus {
-  outline: none;
-  border:  $dborder;
-}
-
-input[type="submit"] {
-  padding: 10px 15px;
-  background: $main;
-  color: white;
-  border: 3px solid darken($main, 5);
-  font-family: $raleway;
-  font-size: 20px;
-  &:hover {
-    background: lighten($main, 5);
-    border-color: $main;
-  }
-}
-
-/** Gallery Wrapper **/
-.gallery-wrapper {
-  @include container;
-  @include span(3 of 5);
-  margin-top: 5px;
-  width: 780px;
-  position: relative;
-  input[type="radio"] {
-    display: none;
-    + label {
-      height: $img;
-      img {
-        height: $img;
-        width: auto;
-      }
-    }
-    &:checked + label {
-
-    }
-  }
-  .img-wrapper {
-    float: left;
-    height: $img;
-    width: $img;
-    overflow: hidden;
-    margin: 0 5px 10px 5px;
-    border: $lborder;
-    transition: border 0.3s;
-  }
-  .img-wrapper-wrapper {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 672px;
-  }
-}
-.selected {
-  border: $dborder !important;
-}
-
-/** Cards **/
-.whisper {
-	box-sizing: border-box;
-	height: 500px;
-	width: 350px;
-	padding: 0px 1em;
-	margin-bottom: 55px;
-	border: 1px solid black;
-	border-radius: 5px;
-	@include span(isolate 6 of 12 4);
-}
-
-.whisper-text {
-	font-size: 40px;
-	font-weight: bold;
-	color: white;
-	text-align: center;
-	font-family: 'PT Sans Narrow', sans-serif;
-	text-shadow: 2px 0 0 #000, -2px 0 0 purple, 0 2px 0 #000, 0 -2px 0 purple, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 0px 0px 15px black;
-}
-
-.mdl-card__media div {
-	padding: 20px;
-	height: 350px;
-	color: white;
-	font-weight: normal;
-	font-size: 1.8em;
-  line-height: 1em;
-	// background-image: url("http://lorempixel.com/g/580/400/");
-	background-color: gray;
-	text-shadow: 2px 0 0 #000, -2px 0 0 purple, 0 2px 0 #000, 0 -2px 0 purple, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 0px 0px 15px black;
-}
-
-@media (max-width: 850px) {
-	.wrapper {
-		@include container(100%);
-	}
-
-	.whisper{
-		height: 65vw;
-		margin-bottom: 5px;
-		padding: .8vw 2.2vw;
-		@include span(isolate 6 of 12 .25);
-	}
-
-	.whisper-text {
-		font-size: 5.3vw;
-		line-height: 1.2;
-	}
-}
+// Import SCSS Partials
+@import "containers.scss";
+@import "fixes.scss";
+@import "preview.scss";
+@import "gallery.scss";
+@import "form.scss";
