--- a/public/css/main.css
+++ b/public/css/main.css
@@ -144,6 +144,10 @@ body {
     height: 460px; }
 
 .gallery-wrapper {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
