--- a/public/css/main.css
+++ b/public/css/main.css
@@ -247,3 +247,39 @@ input[type="submit"] {
   input[type="submit"]:hover {
     background: #1c7acc;
     border-color: #196db6; }
+
+.shout-card {
+  float: left;
+  position: relative;
+  width: 320px;
+  height: 460px;
+  -webkit-box-shadow: 0px 0px 5px #969696;
+          box-shadow: 0px 0px 5px #969696;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  margin: 20px 120px; }
+  .shout-card .shout-card-top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 320px;
+    height: 460px;
+    -webkit-border-radius: 5px;
+            border-radius: 5px;
+    background-color: white;
+    background-size: contain; }
+  .shout-card .shout-card-bottom {
+    background-color: rgba(245, 245, 245, 0.7);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 320px;
+    height: 40px;
+    -webkit-border-radius: 0px 0px 5px 5px;
+            border-radius: 0px 0px 5px 5px;
+    z-index: 5; }
+    .shout-card .shout-card-bottom p {
+      margin: 0;
+      font-size: 20px;
+      padding: 10px 30px;
+      color: red; }
