--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -1,8 +1,9 @@
 <div class="container">
+
   <div class="shout-card" ng-repeat="(index, shout) in main.shouts">
     <div class="clearfix" ng-if="index % 2 == 0"></div>
-    <img  ng-src="shout.imagePath" class="shout-card-top" />
-    <div class="shout-card-bottom"><p>{{index}}</p></div>
+    <img  ng-src="{{shout.imagePath}}" class="shout-card-top" />
+    <div class="shout-card-bottom"><p></p></div>
   </div>
   <div class="clearfix"></div>
 </div>
