--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,6 +1,6 @@
 // Colors
 $myColor: black;
-$main: #196db6;
+$main: #6388ff;
 $lgray: #f5f5f5;
 $mgray: #969696;
 $dgray: #333;
@@ -38,3 +38,4 @@ $raleway: 'Raleway', tahoma, sans-serif;
 @import "gallery.scss";
 @import "form.scss";
 @import "shouts.scss";
+@import "common.scss";
