--- a/public/scss/gallery.scss
+++ b/public/scss/gallery.scss
@@ -9,6 +9,7 @@
     display: none;
     + label {
       height: $img;
+      cursor: pointer;
       img {
         height: $img;
         width: auto;
