--- a/public/scss/preview.scss
+++ b/public/scss/preview.scss
@@ -1,12 +1,14 @@
 .preview-wrapper {
   @include container;
   @include span(2 of 5);
-  margin: 5px 10px;
+  margin: 15px 10px;
   position: relative;
   width: 320px;
   height: 460px;
   overflow: hidden;
   background-color: #222; //find a pattern
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px $mgray;
   img{
     position: absolute;
     left: 0;
