--- a/public/scss/shouts.scss
+++ b/public/scss/shouts.scss
@@ -5,7 +5,7 @@
   height: 460px;
   box-shadow: 0px 0px 5px $mgray;
   border-radius: 5px;
-  margin: 20px 20px;
+  margin: 0px 10px 20px;
   .shout-card-top {
     position: absolute;
     top: 0;
@@ -17,7 +17,7 @@
     background-size: contain;
   }
   .shout-card-bottom {
-    background-color: transparentize($lgray, .3);
+    background-color: transparentize($lgray, .2);
     position: absolute;
     bottom: 0;
     left: 0;
@@ -31,5 +31,13 @@
       padding: 10px 30px;
       color: red;
     }
+  }
+}
+
+@media (max-width: 768px) {
+  .shout-card {
+    display: block;
+    margin: 20px auto;
+    float: none;
   }
 }
