--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -1,5 +1,8 @@
+<a href="/create">
+  <div class="corner"></div>
+  <div class="corner-plus">+</div>
+</a>
 <div class="container">
-
   <div class="shout-card" ng-repeat="(index, shout) in main.shouts">
     <div class="clearfix" ng-if="index % 2 == 0"></div>
     <img  ng-src="{{shout.imagePath}}" class="shout-card-top" />
