--- a/public/partials/create.html
+++ b/public/partials/create.html
@@ -12,12 +12,13 @@
   </div>
   <div class="gallery-wrapper">
     <div class="img-wrapper-wrapper">
-    <form class="radio-gallery" ng-submit="create.submitShout()">
+    <form class="radio-gallery" ng-submit="create.postShout()">
       <div class="img-wrapper" ng-repeat="(index, image) in create.returnedImages"  ng-class="{'selected' : index == create.curr}">
         <input type="radio" name="gallery" value="{{index}}" id="thumb-{{index}}" ng-model="create.curr">
         <label for="thumb-{{index}}"><img ng-src="{{image.thumb}}" class="gallery-item"></label>
       </div>
       <input type="submit" value="Shout It Out" class="shoutsubmit" ng-if="create.canPreview">
+      <p class="loading" ng-if="create.isLoading">Loading...</p>
     </form>
   </div>
   <div class="clearfix"></div>
