--- a/public/scss/common.scss
+++ b/public/scss/common.scss
@@ -32,6 +32,7 @@
   border-top: 70px solid transparent;
   border-bottom: 70px solid transparent;
   border-left: 70px solid $main;
+  z-index: 9;
   // transform: rotate(0deg);
 }
 .corner-plus {
