--- a/public/css/main.css
+++ b/public/css/main.css
@@ -260,6 +260,11 @@ input[type="submit"] {
     background: #7d9bff;
     border-color: #6388ff; }
 
+.remaining {
+  font-family: "Raleway", tahoma, sans-serif;
+  font-size: 12px;
+  color: #969696; }
+
 @media (max-width: 768px) {
   input[type="text"] {
     width: 70vw; } }
