--- a/public/partials/create.html
+++ b/public/partials/create.html
@@ -1,8 +1,9 @@
 <div class="form-wrapper">
   <h3 ng-if="!create.canPreview">Share Your Secrets</h3>
   <form class="glow"  ng-submit="create.getImages()">
-    <input class="glow" type="text" placeholder="Enter Your Text" name="text" ng-model="create.search" autofocus>
+    <input class="glow" type="text" placeholder="Enter Your Text" name="text" maxlength="200" ng-model="create.search" autofocus>
     <input type="submit" name="submit" value="Next">
+    <div class="remaining">{{200 - create.search.length}}</div>
   </form>
 </div>
 <div class="container">
