--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -16,7 +16,7 @@ $dborder: solid 3px $mgray;
 // Susy
 $susy: (
   debug: (
-    image: show,
+    image: hide,
     color: rgba(#66f, .25),
     output: overlay,
     toggle: top right,
