--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -2,6 +2,13 @@
   <div class="corner"></div>
   <div class="corner-plus">+</div>
 </a>
+
+<div class="mobile-menu">
+  <a href="/create" class="main-button">
+    <span>+</span>
+  </a>
+</div>
+
 <div class="container">
   <div class="shout-card" ng-repeat="(index, shout) in main.shouts">
     <div class="clearfix" ng-if="index % 2 == 0"></div>
