--- a/public/scss/loader.scss
+++ b/public/scss/loader.scss
@@ -30,6 +30,7 @@
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
+  font-family: $raleway;
 	font-size: 22px;
 	animation-name: spin;
 	animation-duration: 3s;
