--- a/public/css/main.css
+++ b/public/css/main.css
@@ -221,6 +221,11 @@ input[type="submit"] {
 .banner-wrapper {
   width: 100vw; }
 
+.total-wrapper {
+  position: relative;
+  height: 100%;
+  padding-bottom: 100px; }
+
 .banner {
   width: 340px;
   margin: 10px auto; }
@@ -267,6 +272,72 @@ input[type="submit"] {
   font-size: 16px;
   text-align: center; }
 
+.mobile-menu {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #f5f5f5;
+  -webkit-box-shadow: 0px 0px 2px #333;
+          box-shadow: 0px 0px 2px #333;
+  z-index: 15; }
+  .mobile-menu .main-button-deactive {
+    position: fixed;
+    bottom: 10px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
+    background-color: #8a9dd8;
+    width: 80px;
+    height: 80px;
+    z-index: 16;
+    border: 4px solid #f5f5f5;
+    -webkit-box-shadow: 0 0 0px 2px #969696;
+            box-shadow: 0 0 0px 2px #969696; }
+  .mobile-menu .main-button, .mobile-menu input {
+    cursor: pointer;
+    position: fixed;
+    bottom: 10px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
+    background-color: #6388ff;
+    width: 80px;
+    height: 80px;
+    z-index: 16;
+    border: 4px solid #f5f5f5;
+    -webkit-box-shadow: 0 0 0px 2px #969696;
+            box-shadow: 0 0 0px 2px #969696; }
+    .mobile-menu .main-button span, .mobile-menu input span {
+      position: fixed;
+      bottom: 10px;
+      left: 50%;
+      -webkit-transform: translatex(-50%);
+          -ms-transform: translatex(-50%);
+              transform: translatex(-50%);
+      font-size: 44px;
+      color: white;
+      font-family: "Raleway", tahoma, sans-serif; }
+    .mobile-menu .main-button:hover, .mobile-menu input:hover {
+      background-color: #7d9bff;
+      border: 4px solid #f5f5f5; }
+
+@media (max-width: 768px) {
+  .corner-plus, .corner {
+    display: none; }
+  .mobile-menu {
+    display: block; }
+  #web-submit {
+    display: none; } }
+
 #loader {
   position: fixed;
   top: 0;
@@ -303,6 +374,7 @@ input[type="submit"] {
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  font-family: "Raleway", tahoma, sans-serif;
   font-size: 22px;
   -webkit-animation-name: spin;
           animation-name: spin;
