add meta viewport for mobile view

--- a/public/scss/common.scss
+++ b/public/scss/common.scss
@@ -112,7 +112,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .corner-plus, .corner {
     display: none;
   }
