--- a/public/css/main.css
+++ b/public/css/main.css
@@ -330,7 +330,7 @@ input[type="submit"] {
       background-color: #7d9bff;
       border: 4px solid #f5f5f5; }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .corner-plus, .corner {
     display: none; }
   .mobile-menu {
