--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,13 +9,18 @@
     clear: both; }
 
 .container {
-  max-width: 1120px;
-  margin-left: auto;
-  margin-right: auto; }
-  .container:after {
-    content: " ";
-    display: block;
-    clear: both; }
+  margin: 0 auto;
+  max-width: 1020px; }
+
+@media screen and (min-width: 568px) and (max-width: 768px) {
+  .container {
+    margin: 0 auto;
+    max-width: 559px; } }
+
+@media screen and (max-width: 567px) {
+  .container {
+    margin: 0 auto;
+    max-width: 320px; } }
 
 body {
   padding: 0;
@@ -185,13 +190,12 @@ input[type="submit"] {
           box-shadow: 0px 0px 5px #969696;
   -webkit-border-radius: 5px;
           border-radius: 5px;
-  margin: 0px 10px 20px; }
+  margin: 0px 10px 20px;
+  padding: 0; }
   .shout-card .shout-card-top {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 320px;
-    height: 460px;
+    margin-top: -1px;
+    width: 100%;
+    height: auto;
     -webkit-border-radius: 5px;
             border-radius: 5px;
     background-color: white;
@@ -199,9 +203,9 @@ input[type="submit"] {
   .shout-card .shout-card-bottom {
     background-color: rgba(245, 245, 245, 0.8);
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     left: 0;
-    width: 320px;
+    width: 100%;
     height: 40px;
     -webkit-border-radius: 0px 0px 5px 5px;
             border-radius: 0px 0px 5px 5px;
@@ -212,11 +216,21 @@ input[type="submit"] {
       padding: 10px 30px;
       color: red; }
 
-@media (max-width: 768px) {
+@media screen and (min-width: 568px) and (max-width: 768px) {
   .shout-card {
-    display: block;
-    margin: 20px auto;
-    float: none; } }
+    width: 176px;
+    height: 253px;
+    margin: 0 5px 10px; }
+    .shout-card .shout-card-bottom {
+      height: 22px; } }
+
+@media screen and (max-width: 567px) {
+  .shout-card {
+    width: 144px;
+    height: 207px;
+    margin: 0 5px 10px; }
+    .shout-card .shout-card-bottom {
+      height: 18px; } }
 
 .banner-wrapper {
   width: 100vw; }
@@ -229,6 +243,10 @@ input[type="submit"] {
 .banner {
   width: 340px;
   margin: 10px auto; }
+
+.banner a img {
+  width: 340px;
+  height: auto; }
 
 .nav {
   position: absolute;
@@ -331,6 +349,12 @@ input[type="submit"] {
       border: 4px solid #f5f5f5; }
 
 @media screen and (max-width: 768px) {
+  .banner {
+    width: 300px;
+    margin: 10px auto; }
+  .banner a img {
+    width: 300px;
+    height: auto; }
   .corner-plus, .corner {
     display: none; }
   .mobile-menu {
