--- a/public/scss/shouts.scss
+++ b/public/scss/shouts.scss
@@ -6,12 +6,11 @@
   box-shadow: 0px 0px 5px $mgray;
   border-radius: 5px;
   margin: 0px 10px 20px;
+  padding: 0;
   .shout-card-top {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 320px;
-    height: 460px;
+    margin-top: -1px;
+    width: 100%;
+    height: auto;
     border-radius: 5px;
     background-color: white;
     background-size: contain;
@@ -19,9 +18,9 @@
   .shout-card-bottom {
     background-color: transparentize($lgray, .2);
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     left: 0;
-    width: 320px;
+    width: 100%;
     height: 40px;
     border-radius: 0px 0px 5px 5px;
     z-index: 5;
@@ -34,10 +33,26 @@
   }
 }
 
-@media (max-width: 768px) {
+// Tablet and Sideways Phone
+@media screen and (min-width: 568px) and (max-width: 768px) {
   .shout-card {
-    display: block;
-    margin: 20px auto;
-    float: none;
+    width: 176px;
+    height: 253px;
+    margin: 0 5px 10px;
+    .shout-card-bottom {
+      height: 22px;
+    }
   }
+}
+
+// Phone Screen
+@media screen and (max-width: 567px) {
+    .shout-card {
+      width: 144px;
+      height: 207px;
+      margin: 0 5px 10px;
+      .shout-card-bottom {
+        height: 18px;
+      }
+    }
 }
