--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,6 +9,7 @@
     clear: both; }
 
 .container {
+  position: relative;
   margin: 0 auto;
   max-width: 1020px; }
 
@@ -40,15 +41,11 @@ body {
   display: none !important; }
 
 .preview-wrapper {
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 40%;
-  float: left;
-  margin: 15px 10px;
-  position: relative;
+  display: inline-block;
+  margin-top: 15px;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 320px;
   height: 460px;
   overflow: hidden;
@@ -57,10 +54,6 @@ body {
           border-radius: 5px;
   -webkit-box-shadow: 0px 0px 5px #969696;
           box-shadow: 0px 0px 5px #969696; }
-  .preview-wrapper:after {
-    content: " ";
-    display: block;
-    clear: both; }
   .preview-wrapper img {
     position: absolute;
     left: 0;
@@ -77,25 +70,25 @@ body {
     width: 320px;
     height: 460px; }
 
+@media screen and (max-width: 768px) {
+  .preview-wrapper {
+    display: block;
+    position: relative;
+    margin: 0px auto;
+    width: 320px;
+    top: auto;
+    left: auto; } }
+
 .gallery-wrapper {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 60%;
-  float: left;
+  position: absolute;
+  top: 0px;
+  left: 340px;
   margin-top: 15px;
-  width: 780px;
-  position: relative; }
-  .gallery-wrapper:after {
-    content: " ";
-    display: block;
-    clear: both; }
+  max-width: 680px; }
   .gallery-wrapper input[type="radio"] {
     display: none; }
     .gallery-wrapper input[type="radio"] + label {
@@ -105,6 +98,7 @@ body {
         height: 124px;
         width: auto; }
   .gallery-wrapper .img-wrapper {
+    position: relative;
     float: left;
     height: 124px;
     width: 124px;
@@ -113,13 +107,6 @@ body {
     border: 3px solid #c9c9c9;
     -webkit-transition: border 0.3s;
     transition: border 0.3s; }
-  .gallery-wrapper .img-wrapper-wrapper {
-    position: absolute;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
-    width: 672px; }
 
 .selected {
   border: solid 3px #969696 !important; }
@@ -128,6 +115,24 @@ body {
   display: block;
   margin: 0px auto;
   width: 300px; }
+
+@media screen and (min-width: 568px) and (max-width: 768px) {
+  .gallery-wrapper {
+    display: block;
+    position: relative;
+    margin: 20px auto;
+    width: 536px;
+    top: auto;
+    left: auto; } }
+
+@media screen and (max-width: 567px) {
+  .gallery-wrapper {
+    display: block;
+    position: relative;
+    margin: 20px auto;
+    width: 268px;
+    top: auto;
+    left: auto; } }
 
 .form-wrapper {
   margin-top: 10px;
@@ -347,6 +352,8 @@ input[type="submit"] {
     .mobile-menu .main-button:hover, .mobile-menu input:hover {
       background-color: #7d9bff;
       border: 4px solid #f5f5f5; }
+    .mobile-menu .main-button:focus, .mobile-menu input:focus {
+      outline: none; }
 
 @media screen and (max-width: 768px) {
   .banner {
